infrastructure/dan/adapters/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    fullName: adapter-prod
    organization: dan
  name: adapter-prod
  namespace: dan2
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    fullName: adapter-prod
