infrastructure/dan/adapters/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    fullName: adapter-prod
    organization: dan
  name: adapter-prod
  namespace: dan2
spec:
  rules:
  - host: dan.eu3.adapter.unchain.io
    http:
      paths:
      - backend:
          serviceName: adapter-prod
          servicePort: 80
        path: /adapter--production(/|$)(.*)
  tls:
  - hosts:
    - dan.eu3.adapter.unchain.io
    secretName: dan.eu3.adapter.unchain.io
